--- a/main.html
+++ b/main.html
@@ -5,42 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>CodeDay</title>
 </head>
 <body>
-    <header>
-        <div class="head-top container-fluid">
+        <header>
             <div class="container">
-                <div class="row">
-                    <div class="col-2">
-                        <a href="#" class="logo">CodeDay
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand logo" href="#">CodeDay
                             <img src="img/logo.png" alt="Logo">
                         </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <img src="img/list.svg" alt="Menu button" class="burger_icon">
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav menu">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Tasks</a>
+                                </li> 
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">My statistic</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Log in</a> 
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-
-                    <div class="menu col-6">
-                        <nav>
-                            <a href="#">Tasks</a>
-                            <a href="#">My statistic</a>
-                            <a href="#">Log in</a>
-                        </nav>
-                    </div>
-                </div>
+                </nav>
             </div>
-        </div>
-    </header>
+        </header>
+
 
     <div class="content1">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="offer">
                         <div class="offer-text">
                             Let's write your <br> 1st program <br> And change your life
                         </div>
                         <div class="offer-button">
-                            <a  href="http://www.itmathrepetitor.ru/prog/zadachi-na-vychisleniya/">Get start</a>
+                            <a href="http://www.itmathrepetitor.ru/prog/zadachi-na-vychisleniya/" class="offer-link">Get start</a>
                         </div>
                     </div>
                 </div>
@@ -64,16 +72,16 @@
                     </h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-3">
+            <div class="row lg md">
+                <div class="col-lg-4 col-md-7">
                     <h2>Tasks</h2>
                     <p>A large number of tasks on a variety of topics that will help develop programming skills and teach you to think in a new way.</p>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-4 col-md-7">
                    <h2>Community</h2>
                    <p>A huge number of people united by a common goal - development. A large friendly community that is ready to help you at any time</p>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-4 col-md-7">
                     <h2>About</h2>
                     <p>fsdd </p>
                 </div>
@@ -84,16 +92,16 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4 col-sm-8">
                     <a href="#" class="footer-logo">CodeDay
                         <img src="img/logo.png" alt="Logo">
                     </a> 
                 </div>
-                <div class="col-4 contacts">
+                <div class="col-lg-4 col-sm-8  contacts">
                     <p>Email: mishkin_mi@edu.surgu.ru</p>
                     <p>Phone: 7 982 56 25 285</p>
                 </div>
-                <div class="col-4 social">
+                <div class="col-lg-4 col-sm-8 social">
                     <img src="img/VK.png" alt="VK">
                     <img class="TG" src="img/TG.png" alt="TG">
                     <img src="img/Ints.png" alt="INST">
