--- a/main.html
+++ b/main.html
@@ -75,15 +75,15 @@
             <div class="row lg md">
                 <div class="col-lg-4 col-md-7">
                     <h2>Tasks</h2>
-                    <p>A large number of tasks on a variety of topics that will help develop programming skills and teach you to think in a new way.</p>
+                    <p>A large number of tasks on a variety of topics that will help develop programming skills and teach you to think in a new way</p>
                 </div>
                 <div class="col-lg-4 col-md-7">
                    <h2>Community</h2>
                    <p>A huge number of people united by a common goal - development. A large friendly community that is ready to help you at any time</p>
                 </div>
                 <div class="col-lg-4 col-md-7">
-                    <h2>About</h2>
-                    <p>fsdd </p>
+                    <h2>Help</h2>
+                    <p>A lot of professional programmers have prepared explanations of solutions to many problems for you </p>
                 </div>
             </div>
         </div>
